# Lyra

./: .gitignore  Lyra.sln  README.md
Lyra.Common/: Lyra.Common.csproj
Lyra.Common/src/: DropStats.cs  DropStatus.cs  IDropStatusProvider.cs  ImageFormatType.cs  LoadTimeEstimator.cs  Logger.cs  LyraIO.cs
Lyra.Common/src/Events/: EventManager.cs  IDisplayScaleAware.cs  IDrawableSizeAware.cs
Lyra.Common/src/Settings/: AppSettings.cs  SettingsManager.cs  UiSettings.cs
Lyra.Common/src/Settings/Enums/: Backend.cs  BackgroundMode.cs  InfoMode.cs  MidMouseButtonFunction.cs  SamplingMode.cs  WindowState.cs
Lyra.Common/src/SystemExtensions/: EnumExtensions.cs
Lyra.Core/: Lyra.Core.csproj
Lyra.Core.Tests/: Lyra.Core.Tests.csproj
Lyra.Core.Tests/src/PathUtils/: PathUtilsTest.cs
Lyra.Core/src/: NativeLibraryLoader.cs  Program.cs
Lyra.Core/src/DropStatusProvider/: DropProgress.cs  DropProgressTracker.cs  DropStats.cs  DropStatus.cs  IDropProgressProvider.cs  IDropStatusProvider.cs
Lyra.Core/src/FileLoader/: CollectionType.cs  DirectoryNavigator.cs  FileDropContext.cs  FilePathProcessor.cs
Lyra.Core/src/PathUtils/: PathComparer.cs  PathUtils.cs
Lyra.Core/src/Renderer/: ICompositeContentDrawer.cs  IRenderer.cs  SkiaCompositeContentDrawer.cs  SkiaMetalRenderer.cs  SkiaOpenGlRenderer.cs  SkiaRendererBase.cs  SkiaVulkanRenderer.cs  ViewportMath.cs
Lyra.Core/src/SdlCore/: DimensionHelper.cs  PanHelper.cs  PixelSize.cs  Sdl.Core.cs  Sdl.DragAndDrop.cs  Sdl.EventHandler.cs  Sdl.Input.cs
Lyra.Core/src/SystemUtils/: FileExplorerOpener.cs  TtfLoader.cs
Lyra.Imaging/: Lyra.Imaging.csproj
Lyra.Imaging/src/: ImageStore.cs  NativeLibraryLoader.cs
Lyra.Imaging/src/Codecs/: DecoderIO.cs  ExrDecoder.cs  FloatRgbaDecoderBase.cs  HdrDecoder.cs  HeifDecoder.cs  IImageDecoder.cs  ImageSharpDecoder.cs  J2KDecoder.cs  PsdDecoder.cs  SkiaDecoder.cs  SvgDecoder.cs
Lyra.Imaging/src/ConstraintsProvider/: DecodeConstraintsProvider.cs
Lyra.Imaging/src/Content/: Composite.cs  ExifInfo.cs  ICompositeContent.cs  RasterContent.cs  RasterContentLarge.cs  RasterTileSource.cs  TileDecodeScheduler.cs  TileMath.cs  TileOrder.cs  VectorContent.cs
Lyra.Imaging/src/Interop/: ExrNative.cs  HdrNative.cs  J2KNative.cs  NativeErrors.cs
Lyra.Imaging/src/Pipeline/: DecoderManager.cs  ImageLoader.cs  MetadataProcessor.cs
native/HDRWrapper/: CMakeLists.txt  hdr_native.cpp
native/OpenEXRWrapper/: CMakeLists.txt  exr_native.cpp
native/OpenJPEGWrapper/: CMakeLists.txt  j2k_native.cpp
(+10 files in other folders)
